<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fusion</string>
    <string name="app_key">kid_VV98k67Kgq</string>
    <string name="app_secret">cecb0dc1a55d4211a1959613358cd356</string>
    <string name="twitter_secret">jBFdsjj9KnKAQNIszYZQ079QCu15iVxqylzP5p9qPvo</string>
    <string name="twiter_key">2QBUol99HG0MJQuDwbv25Q</string>
    <string name="access_token">1172507377-IoTi1zu4OZ5oXvX4lpgSqJkgIyRr61BLC7UnQc6</string>
    <string name="access_token_secret">ijA9y6dInkx8wPwoz3NTVJ3vmlezODWKksSF9QKaIpEg8</string>
    <string name="username">Username (4&#8211;16 chars.)</string>
    <string name="password">Password (5&#8211;16 chars.)</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="okButton">Sign Up</string>
    <string name="cancelButton">Cancel</string>
    <string name="welcome">Welcome to Fusion setup</string>
    <string name="leaderboardTitle">Fusion Rankings</string>
    <string name="backButton">Back</string>
    <string name="refreshButton">Refresh</string>
    <string name="user">PLAYER</string>
    <string name="userLevel">LEVEL</string>
    <string name="score">SCORE</string>
    <string name="origin">COUNTRY</string>
    <string name="query">Query Type</string>
    <string name="queryDirections">Select a query type and refresh to make the request</string>
    <string name="directions">In order to track your highscore you need to sign up for the leaderboards.
    If you don\'t want to use the leaderboard you can elect to cancel this option. You can always change this setting from the game menu.</string>
</resources>