<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView style="@style/HeaderStyle" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/welcome" android:textColor="@android:color/holo_red_dark"/>
    
    <TextView style="@style/SubTextStyle" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/directions"
        android:padding="2dip" android:layout_marginBottom="5dip"/>
    
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" android:layout_margin="2dip">
        
        <TextView style="@style/TitleStyle" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/username" android:labelFor="@+id/username"/>
    
       <EditText android:id="@+id/username" style="@style/TextStyle" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:inputType="textCapWords" android:maxLength="16"/>
       
       <TextView style="@style/TitleStyle" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/password" android:labelFor="@+id/password"/>
    
       <EditText android:id="@+id/password" style="@style/TextStyle" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:inputType="textPassword" android:maxLength="16"/>
    
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" android:layout_margin="2dip">
        
        <TextView style="@style/TitleStyle" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/country" android:labelFor="@+id/country"/>
    
       <Spinner android:id="@+id/country" style="@style/TextStyle" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_margin="1dip"/>
       
		<TextView style="@style/TitleStyle" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/email" android:labelFor="@+id/email"/>
    
       <EditText android:id="@+id/email" style="@style/TextStyle" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:inputType="textEmailAddress"/>
       
    </LinearLayout>
    
    
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" android:layout_margin="2dip">
       
       <Button android:id="@+id/doneButton" android:layout_width="match_parent" android:layout_height="50dip" android:text="@string/okButton"/>
	   <Button android:id="@+id/cancelButton" android:layout_width="match_parent" android:layout_height="50dip" android:text="@string/cancelButton"/>
	
	</LinearLayout>
	
</LinearLayout>
</ScrollView>