<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/leaderboardTitle"/>
        
        <TableLayout android:id="@+id/scoreTable" android:layout_width="match_parent"
            android:layout_height="wrap_content">   
        </TableLayout>
        
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal">
        
            <Button android:id="@+id/backBtn" style="?android:attr/buttonBarButtonStyle" android:layout_weight="0.5" android:layout_width="0dip" 
                android:layout_height="wrap_content" android:text="@string/backButton"/>
            
            <Button android:id="@+id/refreshBtn" style="?android:attr/buttonBarButtonStyle" android:layout_weight="0.5" android:layout_width="0dip" 
                android:layout_height="wrap_content" android:text="@string/refreshButton"/>
            
        </LinearLayout>
            
    </LinearLayout>
    
</ScrollView>